<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="location_default">9581</string>
    <string name="location_title">Location</string>
    <string name="location_key">LocationKey</string>
    <string name="units_title">Units</string>
    <string name="units_key">UnitsKey</string>
    <string name="units_default">metric</string>
    <string name="units_imperial">imperial</string>
    <string-array name="units_entries">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="location_action">View Location</string>
    <string name="share">Share</string>
    <string name="title_activity_detail">Weather Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>,<xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="format_high">High temperature: <xliff:g id="high">%1.0s</xliff:g></string>

    <string name="format_low">Low temperature: <xliff:g id="low">%1.0s</xliff:g></string>

    <string name="sync_account_type">sunshine.example.com</string>

    <string name="content_authority">com.example.sander.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <string name="notifications_title">Weather Notifications</string>

    <string name="notifications_key">NotificationsKey</string>

    <string name="notifications_true">Enabled</string>

    <string name="notifications_false">Not Enabled</string>

    <string name="notifications_default">true</string>
</resources>
